--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
@@ -30,6 +29,8 @@
       margin: 0;
       padding: 0;
     }
+
+    /* relevant classes */
     /* this .card contains everything, it's size and padding dictates the size of the image-container. */
     .card {
       box-sizing: border-box;
@@ -75,6 +76,9 @@
       left: 50%;
       transform: translate(-50%, -50%)
     }
+
+
+    /* other styles */
     .card__title {
       font-weight: 600;
       color: #FFF;
