--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
       margin: 0;
       padding: 0;
     }
-
-    /* relevant classes */
-    /* this .card contains everything, it's size and padding dictates the size of the image-container. */
     .card {
       box-sizing: border-box;
       width: 325px;
@@ -40,45 +37,65 @@
       border-radius: 10px;
       background-color: hsl(216, 50%, 16%);
     }
-    /* relatively positioned to have the layer on top of it with position absolute. */
+    /* image start */
     .image-container {
+      display: block;
       position: relative;
       margin-bottom: 24px;
-      /* height: 275px; */
+      padding: 0;
+      border: none;
+      background: none;
     }
     .image {
+      display: block;
       width: 100%;
-      height: 100%;
       border-radius: 7px;
     }
-    /* this is the div that is behaving strangely, having a height of 100% it measures 4 px more than the image */
-    .layer {
+    .image-container::before {
+      z-index: 1;
+      content: "";
       position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 100%;
       width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+
+      background-color: cyan;
+
       border-radius: 7px;
       opacity: 0;
-      transition: .5s ease;
-      background-color: hsl(178, 100%, 50%, 40%);
+
+      transition: all 0.3s ease-in-out;
     }
-    .layer:hover {
-      opacity: 1;
-    }
-    .layer svg {
+
+    .image-container::after {
+      z-index: 2;
+      content: "";
       position: absolute;
-      top: 50%;
-      right: 50%;
-      bottom: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%)
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+
+      background-image: url("images/icon-view.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+
+      border-radius: 7px;
+      opacity: 0;
+
+      transition: all 0.4s ease-in-out;
     }
+    /* hover animation */
+    .image-container:hover::before {
+      opacity: 0.3;
+    } 
+    .image-container:hover::after {
+      opacity: 1;
+    } 
+    /* image end */
 
-
-    /* other styles */
+    /* card information start */
     .card__title {
       font-weight: 600;
       color: #FFF;
@@ -137,35 +154,32 @@
     .card__creator p:hover {
       color: cyan;
     }
+    /* card information end */
   </style>
 </head>
 <body>
   <div class="card">
-    <div class="image-container">
-      <img class="image" src="./images/image-equilibrium.jpg" alt="weird tilted cube lol">
-      <div class="layer">
-        <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg">
-          <g fill="none" fill-rule="evenodd">
-            <path d="M0 0h48v48H0z"/>
-            <path d="M24 9C14 9 5.46 15.22 2 24c3.46 8.78 12 15 22 15 10.01 0 18.54-6.22 22-15-3.46-8.78-11.99-15-22-15Zm0 25c-5.52 0-10-4.48-10-10s4.48-10 10-10 10 4.48 10 10-4.48 10-10 10Zm0-16c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6Z" fill="#FFF" fill-rule="nonzero"/>
-          </g>
-        </svg>
-      </div>
-    </div>
-    <div>
-      <h2 class="card__title">Equilibrium #3429</h2>
+    <button class="image-container">
+      <img class="image" src="./images/image-equilibrium.jpg" alt="#">
+    </button>
+    <section>
+      <h2 class="card__title" >Equilibrium #3429</h2>
       <p class="card__description">Our Equilibrium collection promotes balance and calm.</p>
       <div class="card__info">
         <div class="card__info--price">
+
           <svg width="11" height="18" xmlns="http://www.w3.org/2000/svg">
             <path d="M11 10.216 5.5 18 0 10.216l5.5 3.263 5.5-3.262ZM5.5 0l5.496 9.169L5.5 12.43 0 9.17 5.5 0Z" fill="#00FFF8"/>
           </svg>
+
           <span>0.041 ETH</span>
         </div>
         <div class="card__info--days">
+
           <svg width="17" height="17" xmlns="http://www.w3.org/2000/svg">
             <path d="M8.305 2.007a6.667 6.667 0 1 0 0 13.334 6.667 6.667 0 0 0 0-13.334Zm2.667 7.334H8.305a.667.667 0 0 1-.667-.667V6.007a.667.667 0 0 1 1.334 0v2h2a.667.667 0 0 1 0 1.334Z" fill="#8BACD9"/>
           </svg>
+
           <span>3 days left</span>
         </div>
       </div>
@@ -173,7 +187,7 @@
         <img src="./images/image-avatar.png" alt="creator">
         <p><span>Creation of </span>Jules Wyvern</p>
       </div>
-    </div>
+    </section>
   </div>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
